exports[`test one-package 1`] = `
Object {
  "BuildMachineOSBuild": "15E65",
  "CFBundleDisplayName": "Test App ß/W",
  "CFBundleDocumentTypes": Array [
    Object {
      "CFBundleTypeExtensions": Array [
        "foo",
      ],
      "CFBundleTypeIconFile": "foo.icns",
      "CFBundleTypeName": "Foo",
      "CFBundleTypeRole": "Viewer",
    },
    Object {
      "CFBundleTypeExtensions": Array [
        "boo",
      ],
      "CFBundleTypeIconFile": "Test App ßW.icns",
      "CFBundleTypeName": "Boo",
      "CFBundleTypeRole": "Shell",
      "LSTypeIsPackage": true,
    },
  ],
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "Test App ßW.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ß/W",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "DTSDKBuild": "14D125",
  "DTSDKName": "macosx10.1010.10",
  "DTXcode": "0721",
  "DTXcodeBuild": "7C1002",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSMinimumSystemVersion": "10.9.0",
  "NSHighResolutionCapable": true,
  "NSMainNibFile": "MainMenu",
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`test one-package 2`] = `
Array [
  Object {
    "file": "latest-mac.json",
  },
  Object {
    "artifactName": "TestApp-1.1.0.dmg",
    "file": "Test App ßW-1.1.0.dmg",
  },
  Object {
    "artifactName": "TestApp-1.1.0-mac.zip",
    "file": "Test App ßW-1.1.0-mac.zip",
  },
]
`;

exports[`test one-package 3`] = `
Object {
  "releaseDate": "1970-01-01T00:00:00.000Z",
  "url": "https://develar.s3.amazonaws.com/test/mac/x64/Test%20App%20%C3%9FW-1.1.0-mac.zip",
  "version": "1.1.0",
}
`;

exports[`test two-package 1`] = `
Array [
  Object {
    "file": "latest-mac.json",
  },
  Object {
    "artifactName": "TestApp-1.1.0.dmg",
    "file": "TestApp-1.1.0.dmg",
  },
  Object {
    "artifactName": "TestApp-1.1.0-mac.zip",
    "file": "TestApp-1.1.0-mac.zip",
  },
]
`;
